<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="staff">Staff</string>
    <string name="customer">Customer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="welcome_to_king_kevin_s_wing_heaven">Welcome to King Kevin\'s Wing Heaven!</string>
    <string name="welcome">WELCOME</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="would_you_like_to_sign_up_for_our_rewards_program">Would you like to sign up for our rewards program?</string>
    <string name="welcome1">Welcome!</string>
    <string name="sign_in">Sign In</string>
    <string name="not_a_rewards_member">Not a rewards member?</string>
    <string name="i_ll_sign_up_right_now">I\'ll sign up right now!</string>
    <string name="no_thanks_take_me_to_the_menu">No thanks, take me to the menu</string>
    <string name="main_menu">Main Menu</string>
    <string name="entrees">Entrees</string>
    <string name="combos">Combos</string>
    <string name="king_kevin_s_wing_heaven">King Kevin\'s Wing Heaven</string>
    <string name="drinks">Drinks</string>
    <string name="specials">Specials</string>
    <string name="games">Games</string>
    <string name="kid_s_menu">Kid\'s Menu</string>
    <string name="help">Help</string>
    <string name="view_cart">View Cart</string>
    <string name="refill">Refill</string>
    <string name="register_for_rewards_now">Register for rewards now!</string>
    <string name="name">name</string>
    <string name="phone_number">Phone number</string>
    <string name="birthday">Birthday</string>
    <string name="sign_up">Sign up!</string>
    <string name="birthday_mmdd">Birthday (mmdd)</string>
    <string name="step_1_pick_your_meat">Step 1: Pick Your Meat</string>
    <string name="boneless">Boneless</string>
    <string name="bone">Bone</string>
    <string name="_43_calories_ea">43 calories ea.</string>
    <string name="_56_calories_ea">56 calories ea.</string>
    <string name="contains_wheat">Contains WHEAT</string>
    <string name="tenders">Tenders</string>
    <string name="_70_calories_ea">70 calories ea.</string>
    <string name="sides">Sides</string>
    <string name="step_2_pick_your_flavor">Step 2: Pick your Flavor</string>
    <string name="barbecue">Barbecue</string>
    <string name="lemon_pepper">Lemon Pepper</string>
    <string name="cajun">Cajun</string>
    <string name="garlic_parm">Garlic Parmesan</string>
    <string name="buffalo">Buffalo</string>
    <string name="hawaiian">Hawaiian</string>
    <string name="select_icon_for_description">Select the icon for description.</string>
    <string name="no_flavor">No Flavor</string>
    <string name="step_3_pick_your_quantity">Step 3: Pick your Quantity</string>
    <string name="next">Next</string>
    <string name="number_of_wings">Number of wings</string>
    <string name="minimum_of_3_wings_please_refer_to_kid_s_menu_for_less">Minimum of 3 wings. (Please refer to Kid\'s Menu for less)</string>
    <string name="price_per_boneless_wing">"$1.50 per Boneless wing"</string>
    <string name="price_per_bone_wing">"$1.75 per Bone wing"</string>
    <string name="price_per_tender">"$2.00 per Tender"</string>
    <string name="step_4_pick_your_sauce">Step 4: Pick your Sauce</string>
    <string name="ranch">Ranch</string>
    <string name="_145_calories_per_serving">145 Calories per serving</string>
    <string name="bleu_cheese">Bleu Cheese</string>
    <string name="_160_calories_per_serving">160 calories per serving</string>
    <string name="contains_milk">Contains MILK</string>
    <string name="honey_mustard">Honey Mustard</string>
    <string name="_125_calories_per_serving">125 Calories per serving</string>
    <string name="no_sauce">No Sauce</string>
    <string name="one_sauce_serving_is_complementary_extra_is_0_75_per_serving">One sauce serving is complementary. Extra is $0.75 per serving</string>
    <string name="number_of_sauce_servings">Number of sauce servings</string>
    <string name="step_5_pick_your_sauce_quantity">Step 5: Pick your Sauce Quantity</string>
    <string name="none">None</string>
    <string name="step_6_add_a_note_to_the_chef_optional">Step 6: Add a note to the chef (optional)</string>
    <string name="additional_note">Additional Note</string>
    <string name="add_note_to_order">Add note to order</string>
    <string name="no_thanks_i_m_good">No thanks, I\'m good!</string>
    <string name="step_7_select_your_add_ons">Step 7: Select your Add-ons</string>
    <string name="take_me_to_the_sides">Take me to the sides!</string>
    <string name="let_s_go_to_the_drinks_menu">Let\'s go to the drinks menu!</string>
    <string name="add_item_to_cart_and_return_to_menu">Add item to cart and return to menu</string>
    <string name="_0_75_per_serving_of_sauce">$0.75 per serving of sauce</string>
    <string name="cajun_fries">Cajun Fries</string>
    <string name="fried_corn">Fried Corn</string>
    <string name="veggie_sticks">Veggie Sticks</string>
    <string name="_36_calories_per_serving">36 calories per serving</string>
    <string name="_30_calories_per_serving">30 calories per serving</string>
    <string name="enter_the_quantity_of_your_side">Enter the quantity of your side</string>
    <string name="_2_00_per_side">$2.00 per side</string>
    <string name="add_side_to_cart">Add side to cart</string>
    <string name="beverages">Beverages</string>
    <string name="lemonade">Lemonade</string>
    <string name="soft_drink">Soft Drink</string>
    <string name="sweet_tea">Sweet Tea</string>
    <string name="water">Water</string>
    <string name="_99_calories_per_serving">99 calories per serving</string>
    <string name="ingredients_lemon_juice_water_sugar_etc">Ingredients: lemon juice, water, sugar, etc.</string>
    <string name="soak_up_tall_glass_of_america_s_favorite_soft_drink_coca_cola">Soak up tall glass of America\'s favorite soft drink, Coca Cola!</string>
    <string name="_150_calories_per_serving">150 calories per serving</string>
    <string name="ingredients_sugar_water_artificial_flavoring_etc">Ingredients: Sugar, Water, Artificial Flavoring, etc.</string>
    <string name="savor_the_taste_of_southern_hospitality_with_the_this_tea_that_has_been_sweetend_to_perfection">Savor the taste of southern hospitality with the this tea that has been sweetend to perfection!</string>
    <string name="_91_calories_per_serving">91 calories per serving</string>
    <string name="ingredients_black_tea_leaves_syrup_etc">Ingredients: Black Tea Leaves, Syrup, etc.</string>
    <string name="one_of_the_simplest_but_most_refreshing_beverages_this_world_has_to_offer">One of the simplest but most refreshing beverages this world has to offer!</string>
    <string name="_0_calories_per_serving">0 calories per serving</string>
    <string name="enter_the_quantity_of_your_drink">Enter the quantity of your drink</string>
    <string name="number_of_drink_servings">Number of drink servings</string>
    <string name="_1_50_per_drink">$1.50 per drink</string>
    <string name="water_is_complimentary">Water is complimentary!</string>
    <string name="add_a_note_to_the_chef_optional">Add a note to the chef (optional)</string>
    <string name="add_drink_to_cart">Add drink to cart!</string>
    <string name="orders">Orders</string>
    <string name="order_total">Order Total</string>
    <string name="orders_may_not_be_altered_once_submitted_are_you_ready_to_place_your_order">Orders may not be altered once submitted. Are you ready to place your order?</string>
    <string name="yes_place_my_order">Yes, place my order!</string>
    <string name="no_i_d_like_to_add_more">No, I\'d like to add more</string>
    <string name="manager_main_menu">Manager Main Menu</string>
    <string name="apply_discount">Apply Discount</string>
    <string name="table_status">Table Status</string>
    <string name="order_history">Order History</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="employees">Employees</string>
    <string name="inventory">Inventory</string>
    <string name="please_enter_table_number">Please enter table number</string>
    <string name="no_specials">There are currently no specials today. Come back on Sunday, Monday, Wednesday, Thursday, or Friday to see our amazing deals!</string>
    <string name="redeem">Redeem</string>
    <string name="wednesday_deal"> 60 Cent Wing Wednesday! Each wing is 60 cents. Get them while they are hot! </string>
    <string name="sixty_cent_wings">60 Cent Wing Wednesday!</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="thursday_deal"> Free side with at least one purchase of wings set to add the perfect touch to your meal! </string>
    <string name="friday">Friday</string>
    <string name="friday_deal"> Special Dish of the Day: Buffalo Chicken Burgers! Ask your waiter for more details! </string>
    <string name="sunday">Sunday</string>
    <string name="sunday_deal"> Free drink Sunday! Enjoy our wings with some of the most refreshing drinks known to man! </string>
    <string name="free_drinks"> Drinks are free today! </string>
    <string name="monday">Monday</string>
    <string name="monday_deal"> Kiddos eat free today! Discount only applies to children 12 and under and entrees off the Kids Meal.</string>
    <string name="notifications">Notifications</string>
    <string name="resolve_all">Resolve All</string>
    <string name="serviced">Serviced</string>
    <string name="optional_add_a_note_to_our_chef">(Optional) Add a note to our chef!</string>
    <string name="boneless_barbecue_wingcombo">Boneless Barbecue Wing Combo</string>
    <string name="kids_barbecue_description">Our delicious barbecue wing combo comes with 3 savory boneless barbecue wings with 1 serving of ranch and a side of grilled corn.</string>
    <string name="_500_calories_per_serving">500 calories per serving</string>
    <string name="wheat_milk_warning">CAUTION: This contains WHEAT AND MILK</string>
    <string name="boneless_lemon_pepper_wing_combo">Lemon Pepper Wing Combo</string>
    <string name="_400_calories_per_serving">400 calories per serving</string>
    <string name="lemon_combo_description">Get three juicy boneless lemon pepper wings with our savory honey mustard sauce along with a side of crispy veggie sticks!</string>
    <string name="modify_table_status">Modify Table Status</string>
    <string name="help_status">Needs Help</string>
    <string name="refill_status">Needs Refill</string>
    <string name="bold_smoky_sweet_and_rich_this_barbeque_sauce_has_got_it_all_it_s_all_the_flavors_of_a_summer_night_distilled_into_one">Bold, smoky, sweet and rich, this barbeque sauce has got it all. It’s all the flavors of a summer night distilled into one.</string>
    <string name="_29_calories_per_1_tbsp">29 Calories (per 1 tbsp)</string>
    <string name="ingrediants_include_worcestershire_sauce_paprika_black_pepper_and_red_wine_vinegar">Ingrediants include Worcestershire sauce, paprika, black pepper, and red wine vinegar</string>
    <string name="add_menu_item">Add Menu Item</string>
    <string name="update_menu_item">Update Menu Item</string>
    <string name="remove_menu_item">Remove Menu Item</string>
    <string name="view_customer_surveys">View Customer Surveys</string>
    <string name="get_all_survey_results">Get all survey results</string>
    <string name="service_rating">Service Rating:</string>
    <string name="food_rating">Food Rating:</string>
    <string name="application_rating">Application Rating:</string>
    <string name="previous">Previous</string>
    <string name="n_a">N/A</string>
    <string name="go_back">Go Back</string>
</resources>