<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_customer_acct_select"
    android:background="@drawable/gradient_list"
    tools:context=".fragments.CustomerAcctSelectFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="127dp"
        android:layout_height="142dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="119dp"
        android:layout_marginLeft="119dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="165dp"
        android:layout_marginBottom="49dp"
        android:src="@drawable/wand"
        app:layout_constraintBottom_toTopOf="@+id/already_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginLeft="119dp"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="133dp"
        android:layout_marginBottom="29dp"
        android:layout_marginTop="100dp"
        android:text="@string/welcome1"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginBottom="12dp"
        android:text="@string/already_have_an_account"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_sign_in"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/black"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/not_a_rewards_member"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/not_a_rewards_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginBottom="12dp"
        android:text="@string/not_a_rewards_member"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="168dp"
        android:text="@string/i_ll_sign_up_right_now"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_skip_registration"
        android:layout_width="305dp"
        android:layout_height="59dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginBottom="88dp"
        android:background="@android:color/black"
        android:text="@string/no_thanks_take_me_to_the_menu"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>